<?xml version="1.0" encoding="UTF-8" ?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/pref_title_secure"
        app:allowDividerAbove="true">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@null"
            android:iconSpaceReserved="false"
            android:key="@string/pref_app_passcode"
            android:singleLineTitle="false"
            android:title="Lock app with passcode"
            app:icon="@null"
            app:iconSpaceReserved="false"
            app:summary="6 digit passcode" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/pref_title_archive"
        app:allowDividerAbove="true">

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_media_servers"
            android:singleLineTitle="true"
            android:summary="Add or remove media servers"
            android:title="Media Servers"
            app:iconSpaceReserved="false"
            app:summary="Add or remove media servers"
            app:title="Media Servers" />

        <Preference
            android:iconSpaceReserved="false"
            android:key="@string/pref_media_folders"
            android:singleLineTitle="true"
            android:summary="Add or remove media folders"
            android:title="Media Folders"
            app:iconSpaceReserved="false" />

        <!--        <ListPreference-->
        <!--            android:iconSpaceReserved="false"-->
        <!--            android:key="media_compression"-->
        <!--            android:singleLineTitle="true"-->
        <!--            android:summary="%s"-->
        <!--            android:title="Media Compression"-->
        <!--            app:allowDividerAbove="true"-->
        <!--            app:allowDividerBelow="false"-->
        <!--            app:defaultValue="higher_quality"-->
        <!--            app:enabled="false"-->
        <!--            app:entries="@array/array_prefs_media_compression_labels"-->
        <!--            app:entryValues="@array/array_prefs_media_compression_values"-->
        <!--            app:iconSpaceReserved="false" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:iconSpaceReserved="false"
        android:layout="@layout/custom_preference_category"
        android:title="Verify"
        app:iconSpaceReserved="false">

        <Preference
            android:iconSpaceReserved="false"
            android:key="proof_mode"
            android:singleLineTitle="false"
            android:title="@string/proofmode"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="Encrypt">

        <SwitchPreferenceCompat
            android:enabled="false"
            android:iconSpaceReserved="false"
            android:key="use_tor"
            android:singleLineTitle="false"
            android:summary="@string/prefs_use_tor_summary"
            android:title="@string/prefs_use_tor_title"
            app:defaultValue="false"
            app:enabled="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="General">

        <SwitchPreferenceCompat
            android:iconSpaceReserved="false"
            android:key="upload_wifi_only"
            android:singleLineTitle="false"
            android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:dialogTitle="Themessss"
            android:iconSpaceReserved="false"
            android:key="theme"
            android:singleLineTitle="false"
            android:summary="%s"
            android:title="@string/prefs_theme_title"
            app:defaultValue="@string/prefs_theme_val_system"
            app:entries="@array/ar_prefs_theme_labels"
            app:entryValues="@array/ar_prefs_theme_val"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="About">

        <Preference
            android:iconSpaceReserved="false"
            android:key="about_app"
            android:singleLineTitle="true"
            android:summary="Tap to view about Save App"
            android:title="Save by Open Archive"
            app:enabled="true"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://open-archive.org/save" />
        </Preference>

        <Preference
            android:iconSpaceReserved="false"
            android:key="privacy_policy"
            android:singleLineTitle="true"
            android:summary="Tap to view our Terms &amp; Privacy Policy"
            android:title="Terms &amp; Privacy Policy"
            app:enabled="true"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://open-archive.org/privacy" />
        </Preference>

        <Preference
            android:iconSpaceReserved="false"
            android:key="app_version"
            android:singleLineTitle="true"
            android:title="Version"
            app:enabled="false"
            app:iconSpaceReserved="false"
            tools:summary="0.7.2.4783" />

    </PreferenceCategory>

</PreferenceScreen>